syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/passsquale/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 4;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  string password = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateRequest {
  UserInfo info = 1;
  string password = 2;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message Updwrap {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  Role role = 4;
}

message UpdateRequest {
  Updwrap wrap = 1;
}

message DeleteRequest {
  int64 id = 1;
}

